<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUp_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subackground"
    tools:context=".Sign_Up">

    <EditText
        android:id="@+id/EmailAddress01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/EmailAdd"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="#FFC66232"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password01"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/RestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/RestaurantName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/Password01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress01"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/SignUp_Already"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="20dp"
        android:gravity="right|center_vertical"
        android:text="@string/AlreadyAMember"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LoginHereBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/LoginHereBtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E0E9EE"
        android:text="@string/LoginHere"
        android:textColor="#0A27C8"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>