<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#A9B5D8"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/OrderPrice"
                android:layout_width="255dp"
                android:layout_height="39dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/priceTest"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking" />

            <TextView
                android:id="@+id/OrderTracking"
                android:layout_width="256dp"
                android:layout_height="60dp"
                android:layout_marginStart="67dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="88dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/OrderState"
                android:layout_width="256dp"
                android:layout_height="42dp"
                android:layout_marginStart="67dp"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/PendingApproval"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/OrderPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking" />

            <Button
                android:id="@+id/button_AcceptOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:backgroundTint="#18880B"
                android:text="Accept"
                app:layout_constraintBottom_toTopOf="@+id/OrderPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking" />

            <Button
                android:id="@+id/button_Reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="#8F1717"
                android:text="@string/RejectOrder"
                app:layout_constraintBottom_toTopOf="@+id/OrderPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>